[gd_scene load_steps=31 format=3 uid="uid://s3xrwlqggblk"]

[ext_resource type="Script" path="res://scripts/enemies/wizard.gd" id="1_mxugb"]
[ext_resource type="Texture2D" uid="uid://wepfk71vfl7k" path="res://assets/characters/wizard/wizard_fly_forward-removebg-preview.png" id="2_8n7sk"]
[ext_resource type="AudioStream" uid="uid://d2nays4wpx35i" path="res://audio/sfx/injured_sfx.wav" id="2_jc8kw"]
[ext_resource type="AudioStream" uid="uid://txqqh2up1k1q" path="res://audio/sfx/wizard_attacked_sfx.wav" id="3_adquq"]
[ext_resource type="Texture2D" uid="uid://brk00n5ffhyub" path="res://assets/characters/wizard/wizard_death-removebg-preview.png" id="3_qoyl6"]
[ext_resource type="PackedScene" uid="uid://cwxi1d6lr4gbe" path="res://scenes/ui/life_bar.tscn" id="4_qgw7n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wt6ad"]
atlas = ExtResource("2_8n7sk")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukt82"]
atlas = ExtResource("2_8n7sk")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc42p"]
atlas = ExtResource("2_8n7sk")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxo5m"]
atlas = ExtResource("2_8n7sk")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwx4j"]
atlas = ExtResource("2_8n7sk")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_23yby"]
atlas = ExtResource("2_8n7sk")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph6lb"]
atlas = ExtResource("3_qoyl6")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i21ij"]
atlas = ExtResource("3_qoyl6")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1quxf"]
atlas = ExtResource("3_qoyl6")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhtxq"]
atlas = ExtResource("3_qoyl6")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_drx7k"]
atlas = ExtResource("3_qoyl6")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_albei"]
atlas = ExtResource("3_qoyl6")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ju8x"]
atlas = ExtResource("3_qoyl6")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uhka"]
atlas = ExtResource("3_qoyl6")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7vf3"]
atlas = ExtResource("3_qoyl6")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7d3i"]
atlas = ExtResource("3_qoyl6")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6w3tx"]
atlas = ExtResource("3_qoyl6")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfgwb"]
atlas = ExtResource("3_qoyl6")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_37wf2"]
atlas = ExtResource("2_8n7sk")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqxyw"]
atlas = ExtResource("2_8n7sk")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0p40k"]
atlas = ExtResource("2_8n7sk")
region = Rect2(400, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_8ttyn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt6ad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukt82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc42p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxo5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwx4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23yby")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph6lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i21ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1quxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhtxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drx7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_albei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ju8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uhka")
}],
"loop": true,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7vf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7d3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6w3tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfgwb")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_37wf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqxyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0p40k")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4j2t"]
size = Vector2(48, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tr6cw"]
size = Vector2(55, 45)

[node name="Wizard" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_mxugb")
attack_amount = 18.0
speed = 60.0
sfx_attack = ExtResource("2_jc8kw")
sfx_attacked = ExtResource("3_adquq")

[node name="WizardAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(6, -7.25)
scale = Vector2(0.65, 0.83125)
sprite_frames = SubResource("SpriteFrames_8ttyn")
animation = &"death"

[node name="LifeBar" parent="." instance=ExtResource("4_qgw7n")]
offset_left = -17.0
offset_top = -40.0
offset_right = 28.0
offset_bottom = -38.0
max_value = 150.0
value = 150.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 3)
shape = SubResource("RectangleShape2D_x4j2t")

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-49, 13)
collision_mask = 9

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(45, 12)
collision_mask = 9

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
bus = &"Wizard"

[node name="PlayerDetectArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectArea"]
position = Vector2(6.5, -6.5)
shape = SubResource("RectangleShape2D_tr6cw")
debug_color = Color(0.836483, 0.339239, 0.492297, 0.42)

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="WizardAnimation" to="." method="_on_animation_finished"]
[connection signal="animation_looped" from="WizardAnimation" to="." method="_on_animation_looped"]
[connection signal="body_entered" from="PlayerDetectArea" to="." method="_on_player_detect_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectArea" to="." method="_on_player_detect_area_body_exited"]
